--- a/.glitterrc
+++ b/.glitterrc
@@ -11,7 +11,8 @@
                 "Refactor",
                 "Docs",
                 "Void",
-                "Deps"
+                "Deps",
+                "Ship"
             ]
         }
     ]
